--- a/DashBoardDB/DashBoardDB.csproj
+++ b/DashBoardDB/DashBoardDB.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" Version="2.0.0-beta.300" />
     <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
+    <PackageReference Include="MySql.Data" Version="8.0.29" />
     <PackageReference Include="SciChart.Wpf.UI.Transitionz" Version="3.1.251" />
   </ItemGroup>
 
@@ -55,6 +56,10 @@
     <Resource Include="images\products.png" />
     <Resource Include="images\profits (1).png" />
     <Resource Include="images\profits.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
