--- a/DashBoardDB/DashBoardDB.csproj
+++ b/DashBoardDB/DashBoardDB.csproj
@@ -12,18 +12,13 @@
 
   <ItemGroup>
     <None Remove="fonts\Dosis.ttf" />
-    <None Remove="images\3500833.png" />
-    <None Remove="images\app-icon-sales-order.png" />
+    <None Remove="images\CloseIcon.png" />
+    <None Remove="images\CompaniesIcon.png" />
     <None Remove="images\dashboardicon.png" />
     <None Remove="images\database.png" />
     <None Remove="images\email.png" />
-    <None Remove="images\icon-pdf-6.jpg" />
-    <None Remove="images\increase-profit-png-profitable-icon-11563204734vs3sappgse.png" />
-    <None Remove="images\kisspng-line-angle-pink-m-product-design-symbol-close-window-icon-free-download-png-and-vector-5c6921a8128a99.937018031550393768076.png" />
-    <None Remove="images\new-order-icon-22.jpg" />
-    <None Remove="images\PikPng.com_business-icon-png_660381.png" />
-    <None Remove="images\PngItem_741993.png" />
-    <None Remove="images\print.png" />
+    <None Remove="images\OrdersIcon.png" />
+    <None Remove="images\PdfIcon.jpg" />
     <None Remove="images\products.png" />
     <None Remove="images\profits %281%29.png" />
     <None Remove="images\profits.png" />
@@ -39,18 +34,13 @@
 
   <ItemGroup>
     <Resource Include="fonts\Dosis.ttf" />
-    <Resource Include="images\3500833.png" />
-    <Resource Include="images\app-icon-sales-order.png" />
+    <Resource Include="images\OrdersIcon.png" />
     <Resource Include="images\dashboardicon.png" />
     <Resource Include="images\database.png" />
     <Resource Include="images\email.png" />
-    <Resource Include="images\icon-pdf-6.jpg" />
-    <Resource Include="images\increase-profit-png-profitable-icon-11563204734vs3sappgse.png" />
-    <Resource Include="images\kisspng-line-angle-pink-m-product-design-symbol-close-window-icon-free-download-png-and-vector-5c6921a8128a99.937018031550393768076.png" />
-    <Resource Include="images\new-order-icon-22.jpg" />
-    <Resource Include="images\PikPng.com_business-icon-png_660381.png" />
-    <Resource Include="images\PngItem_741993.png" />
-    <Resource Include="images\print.png" />
+    <Resource Include="images\PdfIcon.jpg" />
+    <Resource Include="images\CloseIcon.png" />
+    <Resource Include="images\CompaniesIcon.png" />
     <Resource Include="images\products.png" />
     <Resource Include="images\profits (1).png" />
     <Resource Include="images\profits.png" />
